validator_derive_tests/tests/compile-fail/unexpected_list_validator.stderr
error: Unknown field: `not_a_list`
 --> tests/compile-fail/unexpected_list_validator.rs:5:16
  |
5 |     #[validate(not_a_list(a, b, c))]
  |                ^^^^^^^^^^
